# kinect-assignments

./: CMakeLists.txt
src/assignment00/: main.cpp
src/assignment01/: drawVisualizer.cpp  drawVisualizer.hpp  main.cpp  touchRecognizer.cpp  touchRecognizer.hpp  touchVisualizer.cpp  touchVisualizer.hpp
src/assignment02/: classifier.cpp  classifier.hpp  data.cpp  data.hpp  digitVisualizer.cpp  digitVisualizer.hpp  main.cpp
src/assignment03/: calibration.cpp  calibration.hpp  fullscreenWindow.cpp  fullscreenWindow.hpp  game.cpp  game.hpp  main.cpp  multitouchGameControl.cpp  multitouchGameControl.hpp
src/framework/: kinect.cpp  kinect.hpp
